# mongostudio

./: biome.json  index.html  package.json  pnpm-lock.yaml
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: error.rs  lib.rs  main.rs  state.rs
src-tauri/src/commands/: connection.rs  database.rs  document.rs  import_export.rs  mod.rs  monitoring.rs  query.rs  schema.rs
src-tauri/src/models/: connection.rs  database.rs  mod.rs  query.rs  schema.rs
src-tauri/src/services/: connection_manager.rs  crypto.rs  mod.rs  mongo_service.rs  query_parser.rs  schema_analyzer.rs  ssh_tunnel.rs
src-tauri/src/services/js_engine/: bson_convert.rs  collection.rs  context.rs  cursor.rs  db_proxy.rs  globals.rs  mod.rs
src/api/: connection.ts  database.ts  document.ts  importExport.ts  query.ts  schema.ts
src/components/common/: CommandPalette.tsx  ConfirmDialog.tsx  ErrorBoundary.tsx  LoadingSpinner.tsx  TypeBadge.tsx
src/components/connection/: ConnectionBadge.tsx  ConnectionEditDialog.tsx  ConnectionForm.tsx  ConnectionListDialog.tsx  ConnectionTree.tsx  (+1 more)
src/hooks/: useConnection.ts  useKeyboardShortcuts.ts  useQuery.ts  useSchema.ts
src/lib/: sessionPersistence.ts  sessionRestore.ts  sessionSubscriptions.ts
src/stores/: connectionStore.ts  editorStore.ts  queryLibraryStore.ts  resultStore.ts  settingsStore.ts  tabStore.ts
src/types/: connection.ts  database.ts  editor.ts  query.ts  schema.ts  tab.ts
src/utils/: mongo.ts  shortcuts.ts  uriParser.ts
(+38 files in other folders)
