[package]
name = "mongostudio"
version = "0.1.0"
description = "MongoStudio - Professional MongoDB GUI"
authors = ["Christian Curi"]
edition = "2021"

[lib]
name = "mongostudio_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-store = "2"
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
tauri-plugin-fs = "2"
tauri-plugin-window-state = "2"
tauri-plugin-notification = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bson = { version = "2", features = ["chrono-0_4"] }
mongodb = "3"
tokio = { version = "1", features = ["full"] }
uuid = { version = "1", features = ["v4", "serde"] }
aes-gcm = "0.10"
base64 = "0.22"
csv = "1"
ssh2 = "0.9"
thiserror = "2"
chrono = { version = "0.4", features = ["serde"] }
rand = "0.8"
log = "0.4"
tauri-plugin-clipboard-manager = "2.3.2"

[lints.clippy]
all = "warn"
pedantic = "warn"
unwrap_used = "deny"
